Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32336

Valgrind tools are active for an Android device but don't work

XMLWordPrintable

    • e6e62030a (master)

      Currently MemcheckToolRunnerFactory does not have addSupportedDeviceTypes(), i.e. is active for all, but doesn't work in practice.

      Two steps:

      1. Use proper addSupportedDeviceTypes()

      2. https://github.com/nihui/valgrind-android suggests this could actually made work

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            hjk hjk
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes