Valgrind: Restrict tools to actually supported device types

Fixes: QTCREATORBUG-32336
Change-Id: I66f0082b53f29281ba83caac6e16a2be94e93883
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>