src/plugins/valgrind/callgrindtool.cpp
@@ -36,14 +36,19 @@
 #include <debugger/analyzer/analyzerutils.h>
 #include <debugger/analyzer/startremotedialog.h>
 
+#include <docker/dockerconstants.h>
+
 #include <projectexplorer/project.h>
 #include <projectexplorer/projectexplorer.h>
 #include <projectexplorer/projectexplorericons.h>
+#include <projectexplorer/projectexplorerconstants.h>
 #include <projectexplorer/projectmanager.h>
 #include <projectexplorer/projecttree.h>
 #include <projectexplorer/taskhub.h>
 
 #include <solutions/tasking/tasktreerunner.h>
+
+#include <remotelinux/remotelinux_constants.h>
 
 #include <texteditor/texteditor.h>
 #include <texteditor/textdocument.h>
@@ -150,6 +155,11 @@ public:
     {
         setProduct<CallgrindToolRunner>();
         addSupportedRunMode(CALLGRIND_RUN_MODE);
+
+        addSupportedDeviceType(RemoteLinux::Constants::GenericLinuxOsType);
+        addSupportedDeviceType(ProjectExplorer::Constants::DESKTOP_DEVICE_TYPE);
+        addSupportedDeviceType(Docker::Constants::DOCKER_DEVICE_TYPE);
+        // https://github.com/nihui/valgrind-android suggests this could work for android, too.
     }
 };
 
