src/plugins/valgrind/memchecktool.cpp
@@ -31,6 +31,8 @@
 #include <debugger/analyzer/analyzerutils.h>
 #include <debugger/analyzer/startremotedialog.h>
 
+#include <docker/dockerconstants.h>
+
 #include <projectexplorer/buildconfiguration.h>
 #include <projectexplorer/deploymentdata.h>
 #include <projectexplorer/devicesupport/devicekitaspects.h>
@@ -44,6 +46,8 @@
 #include <projectexplorer/taskhub.h>
 #include <projectexplorer/toolchain.h>
 #include <projectexplorer/toolchainkitaspect.h>
+
+#include <remotelinux/remotelinux_constants.h>
 
 #include <utils/checkablemessagebox.h>
 #include <utils/fileutils.h>
@@ -335,6 +339,11 @@ public:
         setProduct<MemcheckToolRunner>();
         addSupportedRunMode(MEMCHECK_RUN_MODE);
         addSupportedRunMode(MEMCHECK_WITH_GDB_RUN_MODE);
+
+        addSupportedDeviceType(RemoteLinux::Constants::GenericLinuxOsType);
+        addSupportedDeviceType(ProjectExplorer::Constants::DESKTOP_DEVICE_TYPE);
+        addSupportedDeviceType(Docker::Constants::DOCKER_DEVICE_TYPE);
+        // FIXME: https://github.com/nihui/valgrind-android suggests this could work for android
     }
 };
 
